<resources>
    <string name="app_name" translatable="false">DP-Wear</string>

    <!-- App Settings/Preferences -->
    <string name="pref_connection_type">Telemetry Connection Type</string>
    <string name="pref_connection_type_summary">Which link to use to connect to the drone</string>
    <string name="pref_mavlink_rates">Stream Rates</string>
    <string name="pref_mavlink_rates_summary">Rate at which flight data should be received from the drone (in Hz)</string>
    <string name="pref_mavlink_stream_rate_ext_stat">Waypoints, GPS raw, fence data, current waypoint, etc</string>
    <string name="pref_mavlink_stream_rate_extra1">Attitude</string>
    <string name="pref_mavlink_stream_rate_extra2">VFR_Hud data</string>
    <string name="pref_mavlink_stream_rate_extra3">AHRS, Hardware Status, Wind</string>
    <string name="pref_mavlink_stream_rate_position">Position data</string>
    <string name="pref_mavlink_stream_rate_RC_override">RC Override</string>
    <string name="pref_mavlink_stream_rate_rc_channels">RC Channel Data</string>
    <string name="pref_mavlink_stream_rate_raw_sensors">Raw Sensors</string>
    <string name="pref_mavlink_stream_rate_raw_controller">Raw Controller</string>
    <string name="pref_connection">Connection Preferences</string>
    <string name="pref_usb">USB Connection</string>
    <string name="pref_baud_type">Telemetry link speed</string>
    <string name="pref_baud_type_summary">Baud Rate of the USB Telemetry Link</string>
    <string name="pref_server">TCP connection</string>
    <string name="pref_server_ip">Server IP</string>
    <string name="pref_server_port">Server Port</string>
    <string name="pref_server_udp">UDP connection</string>
    <string name="pref_udp_server_port">UDP Server Port</string>
    <string name="about">About</string>
    <string name="version">Version</string>
    <string name="usage_statistics">Usage Statistics</string>
    <string name="pref_usage_statistics_title">Send usage statistics</string>
    <string name="pref_usage_statistics_summary">Help improve DroidPlanner by sending usage statistics.</string>
    <string name="pref_bluetooth">BLUETOOTH CONNECTION</string>
    <string name="pref_bluetooth_device_address">Bluetooth device</string>
    <string name="pref_forget_bluetooth_device_address">Forget default device</string>
    <string name="pref_forget_bluetooth_device_address_confirm">Are you sure?</string>
    <string name="pref_bluetooth_forget">Forget</string>
    <string name="user_account_category">User Account</string>
    <string name="droneshare_username">Droneshare username</string>
    <string name="droneshare_enabled">Droneshare enabled</string>
    <string name="do_you_want_to_use_droneshare_">Do you want to use Droneshare?</string>
    <string name="pref_dshare_username_title">Username</string>
    <string name="pref_dshare_password_title">Password</string>
    <string name="droneshare_password">Droneshare password</string>
    <string name="enter_or_pick_a_password">Enter or pick a password</string>
    <string name="if_that_user_does_not_exist_it_will_be_created">If that user does not exist, it will be created</string>

    <!-- Bluetooth device selection strings -->
    <string name="select_device">Select device to connect</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="none_found">No devices found</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="button_scan">Scan for devices</string>
    <string name="scanning">Scanning for devices</string>

</resources>
